src/objects/Batch_Process_Log__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Batch Process Log</relationshipLabel>
        <relationshipName>Batch_Process_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Start Of Day Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Day Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month End Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Result</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch Process Log</label>
    <nameField>
        <label>Apex Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Process Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>